--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -241,6 +241,9 @@ a.top-cart > i {
 .cart-img {
     float: left;
 }
+.cart-img img {
+    object-fit: cover;
+}
 .cart-content {
     float: left;
     padding-left: 15px;
@@ -2412,6 +2415,9 @@ h1.cart-heading {
 }
 .table-content table td.product-thumbnail {
     width: 130px;
+}
+.table-content table td.product-thumbnail img {
+    object-fit: cover;
 }
 .table-content table td.product-remove i {
     color: #000;
