--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -240,7 +240,7 @@
         position: relative;
         z-index: 1000;
     }
-    .fb{
+    /*.fb{
         color: #0d2b75;
     }
     .fb:hover {
@@ -253,14 +253,14 @@
     .instagram:hover{
         color: #972d2e;
         opacity: 1;
-    }
+    }*/
     .mean-container .mean-nav ul>li>.dropdown {
         width: 100% !important;
         top: 100%;
         position: static;
         opacity: 1;
     }
-    .mean-container .mean-nav ul>li>.dropdown li a {
+   /* .mean-container .mean-nav ul>li>.dropdown li a {
         color: #333;
         opacity: 1;
     }
@@ -276,7 +276,7 @@
     .shopping-cart > span {
         background-color: #333;
         color: #fff;
-    }
+    }*/
     .search-input-button input {
         width: 220px;
     }
