modal bg update

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1364,7 +1364,7 @@ color: #333;
     background: rgba(0, 0, 0, 0.5) none repeat scroll 0 0;
 }
 .main-view {
-    background: #fff none repeat scroll 0 0;
+    background: #f3f3f3 none repeat scroll 0 0;
     padding: 60px;
     border-radius: 0;
 }
