--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -671,12 +671,15 @@ a.button-hover::before {
 
 .shop-img img {
     width: 100%;
+    height: 150px;
+    object-fit: cover;
 }
 .shop-img {
     position: relative;
     overflow: hidden;
     border: 1px solid #eee;
     padding: 20px;
+    background-color: #f3f3f3;
 }
 .shop-quick-view {
     left: 0;
